--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,23 +1,87 @@
 <header class="header">
+
 	<div class="header__top top-header">
-		<div class="top-header__menu menu">
-			<button type="button" class="menu__icon icon-menu">
+		<div class="top-header__container _container">
+			<div class="top-header__menu menu">
+				<nav class="menu__body">
+					<ul class="menu__list">
+						<li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Оплата и доставка</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Новости</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+					</ul>
+				</nav>
+			</div>
+			<a href="" class="top-header__user _icon-user">Личный кабинет</a>
+			<button type="button" class="icon-menu">
 				<span></span>
 				<span></span>
 				<span></span>
 			</button>
-			<nav class="menu__body">
-				<ul class="menu__list">
-					<li class="menu__item"><a href="" class="menu__link">О нас</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Оплата и доставка</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Новости</a></li>
-					<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+		</div>
+	</div>
+
+	<div class="header__body body-header">
+		<div class="body-header__container">
+			<a href="" class="body-header__logo"></a>
+			<div class="body-header__search">
+				<form action="" class="search-header">
+					<button type="submit" class="search-header__button _icon-search"></button>
+					<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Поиск"
+						class="search-header__input">
+				</form>
+			</div>
+			<div class="body-header__actions actions-header">
+				<a href="" class="actions-header__lacation _icon-location">Киев</a>
+				<div class="actions-header__phones phones-header">
+					<div data-spollers class="phones-header__items">
+						<div class="phones-header__item">
+							<a href="tel:88007774967" class="phones-header__phone">8-800-777-49-67</a>
+							<button type="button" data-spoller class="phones-header__arrow _icon-arrow-bottom"></button>
+							<ul class="phones-header__list">
+								<li><a href="tel:88007774967" class="phones-header__phone">8-800-777-49-09</a></li>
+								<li><a href="tel:88007774967" class="phones-header__phone">8-800-777-49-56</a></li>
+								<li><a href="tel:88007774967" class="phones-header__phone">8-800-777-49-97</a></li>
+							</ul>
+						</div>
+					</div>
+					<button type="button" data-popup="#callback" class="phones-header__callback">Заказать звонок</button>
+				</div>
+				<a href="" class="actions-header__favorite _icon-favorite"></a>
+				<div class="actions-header__cart cart-header">
+					<div class="cart-header__icon _icon-cart"><span>0</span></div>
+					<div class="cart-header__body">
+						<div class="cart-header__summ">0 р.</div>
+						<a href="" class="cart-header__link">Оформить заказ</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="header__catalog catalog-header">
+		<div class="catalog-header__container">
+			<nav class="catalog-header__menu menu-catalog">
+				<ul class="menu-catalog__list">
+					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Каталог ножей</a></li>
+					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Клинковое оружие</a></li>
+					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Сувенирные изделия</a></li>
+					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Фонари ARMYTEK</a></li>
+					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Сопуствующие товары</a></li>
 				</ul>
 			</nav>
 		</div>
 	</div>
-
-	<div class="header__body body-header"></div>
-
-	<div class="header__catalog catalog-header"></div>
 </header>
+
+<!-- Всплывающее окно "Позвонить" -->
+<div id="callback" aria-hidden="true" class="popup">
+	<div class="popup__wrapper">
+		<div class="popup__content">
+			<button data-close type="button" class="popup__close">Закрыть</button>
+			<div class="popup__text">
+				Text
+			</div>
+		</div>
+	</div>
+</div>
